# Modern-CPP-Learning

Phase-1/File-Cache-Manager/: CMakeLists.txt  README.md
Phase-1/File-Cache-Manager/include/: CacheManager.h  FileCache.h  FileLoader.h  FileSearcher.h
Phase-1/File-Cache-Manager/src/: CacheManager.cpp  FileCache.cpp  FileLoader.cpp  FileSearcher.cpp  main.cpp
Phase-1/Mini-File-Explorer/: Makefile  README.md
Phase-1/Mini-File-Explorer/include/: FileManager.h
Phase-1/Mini-File-Explorer/src/: FileManager.cpp  main.cpp
Phase-1/Mini-Scheduler/: Makefile  README.md
Phase-1/Mini-Scheduler/include/: Scheduler.h
Phase-1/Mini-Scheduler/src/: Scheduler.cpp  main.cpp
